--- a/baseline_rag.ipynb
+++ b/baseline_rag.ipynb
@@ -41,7 +41,7 @@
       },
       "outputs": [],
       "source": [
-        "loader = TextLoader(\"yandex_2023.txt\")\n",
+        "loader = TextLoader(\"data\\yandex_2023.txt\")\n",
         "documents = loader.load()\n",
         "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
         "docs = text_splitter.split_documents(documents)"
